@@ -1,2 +1,11 @@
 # GitDub
 🕹️ Interactive Plateform where you can play Wordle, Checkers, and Numbers!
+
+
+
+java --module-path ../JFX-Mac/lib/ --add-modules=javafx.controls,javafx.fxml main
+
+<img width="796" alt="Screenshot 2023-07-05 at 10 36 08 AM" src="https://github.com/mbouzekri/GameSuite-GitDub/assets/106405634/706174b6-10ce-4d8e-bd43-07d16d0e99c5">
+<img width="796" alt="Screenshot 2023-07-05 at 10 36 34 AM" src="https://github.com/mbouzekri/GameSuite-GitDub/assets/106405634/bf1c831b-a6f1-4afd-ab21-4dfe787d17a1">
+<img width="796" alt="Screenshot 2023-07-05 at 10 36 47 AM" src="https://github.com/mbouzekri/GameSuite-GitDub/assets/106405634/d806dd93-f496-4c66-8419-70f44734b3f7">
+<img width="796" alt="Screenshot 2023-07-05 at 10 37 03 AM" src="https://github.com/mbouzekri/GameSuite-GitDub/assets/106405634/c063fbcc-cc82-42bc-a929-5e06e378df34">
